system/argocd/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
       - argocd.jg1g.com
      secretName: argocd-tls
  rules:
  - host: argocd.jg1g.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
